style(ExternalLink): fix icon and text alignment in texts

--- a/src/components/ExternalLink/ExternalLink.module.css
+++ b/src/components/ExternalLink/ExternalLink.module.css
@@ -1,10 +1,10 @@
 .root {
   display: inline-flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 7px;
 }
 
 .icon {
-  width: 17px;
+  height: 16px;
   fill: currentColor;
 }
